--- a/Páginas/Redirecio2.html
+++ b/Páginas/Redirecio2.html
@@ -15,7 +15,7 @@
 		<br><br>
 			<div class="Opc1">
 				<nav><ul>
-	    <li><a href="Inicio.php">INÍCIO</a></li>
+	    <li><a href="index.php">INÍCIO</a></li>
 		<li><a href="Cardapio.php">CARDÁPIO</a></li>
 	    <li><a href="Churrascaria.php">CHURRASCARIA</a></li>
 	    		</ul></nav>
