--- a/Páginas/Reserva.html
+++ b/Páginas/Reserva.html
@@ -39,13 +39,13 @@ include("cone.php");
 		<br><br>
 			<div class="Opc1">
 				<nav><ul>
-	    <li><a href="Inicio.html">INÍCIO</a></li>
+	    <li><a href="index.html">INÍCIO</a></li>
 		<li><a href="Cardapio.html">CARDÁPIO</a></li>
 	    <li><a href="Churrascaria.html">CHURRASCARIA</a></li>
 	    		</ul></nav>
 			</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="tri"><a href="Inicio.html"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
+<div class="tri"><a href="index.html"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
 <!-- ---------------------------------------------------------------------------------------------------- -->					
 			<div class="Opc2">
 				<nav><ul>
