--- a/Cardapio.html
+++ b/Cardapio.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Churrascaria&Cia | Cardápio</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../CSS/form.css">
+	<link rel="stylesheet" type="text/css" href="CSS/form.css">
 	<link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
@@ -21,7 +21,7 @@
 	    		</ul></nav>
 			</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="tri"><a href="index.html"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
+<div class="tri"><a href="index.html"><img src="Imagens/CC2.png" width="125" height="125"></a></div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
 			<div class="Opc2">
 				<nav><ul>
@@ -42,7 +42,7 @@
 <!-- ---------------------------------------------------------------------------------------------------- -->
 
 	<div class="swhite">
-	<div class="tri2"><img src="../Imagens/CC2.png"></div>
+	<div class="tri2"><img src="Imagens/CC2.png"></div>
 	<br><br>
 	<br><br>
 	<br><br>
@@ -52,7 +52,7 @@
 <!-- ---------------------------------------------------------------------------------------------------- -->			
 
 <div class="resbd">
-	<div class="imgcard"><img src="../Imagens/carne.jpg" width="500" height="300"></div>
+	<div class="imgcard"><img src="Imagens/carne.jpg" width="500" height="300"></div>
 		<div class="tric"></div>
 	
 			<h1>CARNES</h1>
@@ -66,7 +66,7 @@
 <!-- ---------------------------------------------------------------------------------------------------- -->
 
 <div class="resbd">
-	<div class="imgcard"><img src="../Imagens/comid.jpg" width="500" height="300"></div>
+	<div class="imgcard"><img src="Imagens/comid.jpg" width="500" height="300"></div>
 			<div class="tric"></div>
 	
 		<h1>PRATOS</h1>
@@ -80,7 +80,7 @@
 <!-- ---------------------------------------------------------------------------------------------------- -->
 
 <div class="resbd">
-	<div class="imgcard"><img src="../Imagens/dessert.jpg" width="500" height="300"></div>
+	<div class="imgcard"><img src="Imagens/dessert.jpg" width="500" height="300"></div>
 			<div class="tric"></div>
 	
 		<h1>SOBREMESAS</h1>
@@ -94,7 +94,7 @@
 <!-- ---------------------------------------------------------------------------------------------------- -->
 
 <div class="resbd">
-	<div class="imgcard"><img src="../Imagens/bebidas.jpg" width="500" height="300">
+	<div class="imgcard"><img src="Imagens/bebidas.jpg" width="500" height="300">
 		
 	</div>
 			<div class="tric">
