--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@ include("cone.php");
 <head>
 	<title>Churrascaria&Cia | Contatos</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../CSS/form.css">
+	<link rel="stylesheet" type="text/css" href="CSS/form.css">
 	<link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
@@ -42,7 +42,7 @@ include("cone.php");
 	    		</ul></nav>
 			</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="tri"><a href="index.html"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
+<div class="tri"><a href="index.html"><img src="Imagens/CC2.png" width="125" height="125"></a></div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
 			<div class="Opc2">
 				<nav><ul>
