--- a/Eventos.html
+++ b/Eventos.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Churrascaria&Cia | Início</title>
+	<title>Churrascaria&Cia | Eventos</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../CSS/form.css">
+	<link rel="stylesheet" type="text/css" href="CSS/form.css">
 	<link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <br>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="body">
-	<div class="Opc">
+<div class="body6">
+	<div class="OpcEventos">
 		<br><br>
 			<div class="Opc1">
 				<nav><ul>
@@ -21,8 +21,8 @@
 	    		</ul></nav>
 			</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="tri"><a href="index.html"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
-<!-- ---------------------------------------------------------------------------------------------------- -->
+<div class="tri"><a href="index.html"><img src="Imagens/CC2.png" width="125" height="125"></a></div>
+<!-- ---------------------------------------------------------------------------------------------------- -->					
 			<div class="Opc2">
 				<nav><ul>
 		<li><a href="Eventos.html">EVENTOS</a></li>
@@ -31,61 +31,66 @@
 			</ul></nav>
 			</div>
 	</div>
+
+		<h5>Eventos</h5>
 </div>
+<!-- ---------------------------------------------------------------------------------------------------- -->		
+
+<div class="divsbar"></div>	
+	<div class="trie"><img src="Imagens/CC3.png"></div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
 
-<div class="baado">
-	<div class="imgbad"></div>
-	<br><br>
-	<br><br>
-		<h1>VENHA SABOREAR O MELHOR RODÍZIO DE CARNES DA REGIÃO!</h1>
-		<br>
-			<div class="baat">
-				<p>	Além das suculentas carnes, nossa churrascaria oferece uma ampla variedade de pratos, sobremesas irresistíveis, bebidas refrescantes e muito mais para satisfazer todos os gostos.</p>
-				<p><b> Horários de funcionamento: </b></p>
-				<br>
-				<p>	&nbsp; • &nbsp; &nbsp; Terça a Sexta-feira: 15:00 às 23:30 </p>
-				<p> &nbsp; • &nbsp; &nbsp; Sábado e Domingo: 16:00 às 00:30</p>
-					
-				<p>	Faça sua a <a href="Reserva.html"><b><i>reserva online</i></b></a> e receba um desconto exclusivo! É simples: preencha um rápido formulário com algumas informações e venha saborear o melhor da nossa churrascaria! Não perca essa oportunidade!</p>
-			</div>
-</div>
+<div class="anueve">
+	<center><h4>Faça o seu Evento</h4></center>
 
 <!-- ---------------------------------------------------------------------------------------------------- -->
 
-<div class="secbad">
-
-<!-- ---------------------------------------------------------------------------------------------------- -->
-
-	<div class="white">
-		<div class="tri3"><img src="../Imagens/CC2.png"></div>
+	<div class="anunc">
 		
-<!-- ---------------------------------------------------------------------------------------------------- -->
-	<div class="row"><h2>SOBRE NÓS</h2>
-		<p>A Churrascaria&Cia é a mais nova referência em churrasco em Cascavel! Nossa carne vem diretamente da nossa própria fazenda, garantindo <b>qualidade, frescor e um sabor incomparável</b>. Aqui, cada detalhe é pensado para oferecer a você uma experiência única.</p>
 
-		<p>Faça parte da nossa história e descubra o verdadeiro sabor do churrasco! Venha nos conhecer e aproveite o melhor da região.</p>
-	</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-		<div class="carnes">
-				<div class="dcm"><a href="Cardapio.html">MENU</a></div>
-		</div>
-<!-- ---------------------------------------------------------------------------------------------------- -->
-		<div class="pratos">
-				<div class="dcm"><a href="Eventos.html">EVENTOS</a></div>
-		</div>
-<!-- ---------------------------------------------------------------------------------------------------- -->
-		<div class="sobremesas">
-				<div class="dcm"><a href="Reserva.html">RESERVA</a></div>
-		</div>
-<!-- ---------------------------------------------------------------------------------------------------- -->
-	</div>
-<!-- ---------------------------------------------------------------------------------------------------- -->
+		<div class="BEvent">
+			<div class="Event1"></div>
+				<h6>Revellion</h6>
+				<p>Venha celebrar o Ano Novo com a gente! Traga sua família e amigos para uma noite especial. Prepare-se para começar o ano de forma inesquecível!
+				</p>
 
-<div class="logo"><center><img src="../Imagens/CC.png"></center></div>
+		</div>
+<!-- ---------------------------------------------------------------------------------------------------- -->
+		<div class="BEvent">
+			<div class="Event2"></div>
+				<h6>Casamento</h6>
+				<p>Celebre o seu casamento conosco! Comemore esse momento especial com familiares e amigos em grande estilo.</p>
+
+		</div>
+<!-- ---------------------------------------------------------------------------------------------------- -->
+		<div class="BEvent">
+			<div class="Event3"></div>
+				<h6>Shows</h6>
+				<p>Um bom churrasco sempre vem acompanhado de boa música. Venha curtir os melhores shows em nossa churrascaria</p>
+
+		</div>
+<!-- ---------------------------------------------------------------------------------------------------- -->
+		<div class="BEvent">
+			<div class="Event4"></div>
+				<h6>Festas</h6>
+				<p>Aniversários, comemorações, confraternizações e muito mais, nós cuidamos de tudo para você!</p>
+
+		</div>
+<!-- ---------------------------------------------------------------------------------------------------- -->		
+
+<div class="BDescr">
+	<p>Quer participar ou criar o seu evento na nossa churrascaria? Preencha o formulário e entre em <a href="Contact.html"><i>contato</i></a> conosco!</p>
 </div>
-<br>
+	
+<!-- ---------------------------------------------------------------------------------------------------- -->
 
+	</div>
+
+<!-- ---------------------------------------------------------------------------------------------------- -->
+
+</div>
+<br><br>
 <!-- ---------------------------------------------------------------------------------------------------- -->
 <div class="loc">
 	
@@ -118,4 +123,3 @@
 
 <!-- ---------------------------------------------------------------------------------------------------- -->
 </body>
-</html>
