--- a/Redirecio2.html
+++ b/Redirecio2.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Churrascaria&Cia | Contatos</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../CSS/form.css">
+	<link rel="stylesheet" type="text/css" href="CSS/form.css">
 	<meta http-equiv="refresh" content="3; url=Contact.html">
 </head>
 
@@ -21,7 +21,7 @@
 	    		</ul></nav>
 			</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="tri"><a href="Inicio.php"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
+<div class="tri"><a href="Inicio.php"><img src="Imagens/CC2.png" width="125" height="125"></a></div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
 			<div class="Opc2">
 				<nav><ul>
