--- a/Reserva.html
+++ b/Reserva.html
@@ -26,7 +26,7 @@ include("cone.php");
 <head>
 	<title>Churrascaria&Cia | Reserva</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../CSS/form.css">
+	<link rel="stylesheet" type="text/css" href="CSS/form.css">
 	<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
 </head>
@@ -45,7 +45,7 @@ include("cone.php");
 	    		</ul></nav>
 			</div>
 <!-- ---------------------------------------------------------------------------------------------------- -->
-<div class="tri"><a href="index.html"><img src="../Imagens/CC2.png" width="125" height="125"></a></div>
+<div class="tri"><a href="index.html"><img src="Imagens/CC2.png" width="125" height="125"></a></div>
 <!-- ---------------------------------------------------------------------------------------------------- -->					
 			<div class="Opc2">
 				<nav><ul>
